--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,56 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
 body {
-  background: #F4E640;
-  margin: 0;
-  font-family: 'Roboto';
-  font-size: 1.5em;  
+  background: #f2f2f2;
+  color: #333;
+  font-family: "Nunito";
 }
-.layout {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-header {
-  text-align: center;
-  margin: 60px 0;
-}
-header a {
+a {
+  color: #333;
   text-decoration: none;
-  color: black;
-  text-transform: uppercase;
-  display: inline-block;
 }
-header h1, header h2 {
-  margin: 0;
+.content {
+  max-width: 960px;
+  margin: 0 auto;
 }
-header span {
-  display: block;
-  line-height: 1em;
+nav {
+  margin: 10px auto 80px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  border-bottom: 1px solid #ddd;
 }
-header span:first-child {
-  font-size: 1em;
-  font-weight: 400;
+nav a {
+  margin-left: 12px;
 }
-header span:last-child {
-  font-size: 1.5em;
-  font-weight: 800;
-}
-header h2 {
-  font-size: 1.2em;
-  font-weight: 400;
+nav .logo {
+  margin-right: auto;
 }
 footer {
-  background: #111;
-  color: #bbb;
-  padding: 40px;
+  display: block;
   text-align: center;
-  margin-top: auto
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
 }
-.page-content {
-  max-width: 1200px;
-  margin: 20px auto 80px;
-  padding: 0 20px;
-  width: 100%;
-  box-sizing: border-box;
+.not-found {
+  text-align: center;
 }
+.not-found a{
+  color: #4979ff;
+  text-decoration: underline;
+}
+
+
+thead {color:green;}
+tbody {color:blue;}
+tfoot {color:red;}
+
+table, th, td {
+  border: 1px solid black;
+  text-align: center;
+  margin: 0 auto;
+}
+td, th{
+  padding: 5px;
+}
+
+
+
