--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,4 +58,15 @@ td, th{
 }
 
 
-
+nav Link.btn {
+  padding: 10px 16px;
+  border: 2px solid var(--primary);
+  border-radius: 30px;
+  font-weight: 600;
+  color: var(--primary);
+  cursor: pointer;
+}
+nav Link.btn:hover {
+  color: white;
+  background: var(--primary);
+}
