--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,7 +58,7 @@ td, th{
 }
 
 
-nav Link.btn {
+nav a.btn {
   padding: 10px 16px;
   border: 2px solid var(--primary);
   border-radius: 30px;
@@ -66,7 +66,7 @@ nav Link.btn {
   color: var(--primary);
   cursor: pointer;
 }
-nav Link.btn:hover {
+nav a.btn:hover {
   color: white;
   background: var(--primary);
 }
